--- a/specialpurpose/build.xml
+++ b/specialpurpose/build.xml
@@ -21,6 +21,7 @@
 <project name="OFBiz Special Purpose Applications Build" default="build" basedir=".">    
     <filelist id="specialpurpose-builds" dir="specialpurpose"
         files="
+        appserver/build.xml,
         birt/build.xml,
         ecommerce/build.xml,
         lucene/build.xml,
